# pokemini

.claude/: settings.local.json
platform/playdate/: .gitignore  BUILD.md  CMakeLists.txt  NOTES.md  PokeMini_DTCM.c  PokeMini_DTCM.h  PokeMini_ITCMCallbacks.c  PokeMini_Playdate.c  PokeMini_Playdate_EEPROM.c  PokeMini_UserStack.c  PokeMini_UserStack.h  README.html  README.md  ROADMAP.md  link_map.ld
platform/playdate/.claude/: settings.local.json
platform/playdate/PokeMini.pdx/: pdex.dylib  pdxinfo
platform/playdate/PokeMini_DEVICE.pdx/: pdex.dylib  pdxinfo
platform/playdate/Source/: LICENSE  pdex.dylib  pdxinfo
platform/playdate/build-device/: CMakeCache.txt  Makefile  cmake_install.cmake  game.map
platform/playdate/build-device/.claude/: settings.local.json
platform/playdate/tools/: minx_alu_decode_check.c  minx_ce_abs_mov_check.c  minx_ce_xshort_a_check.c  minx_mov_decode_check.c  minx_short_jump_decode_check.c  minx_tst_hl_imm_check.c
source/: Endianess.h  Hardware.c  MinxCPU.h  MinxCPU_CE.c  MinxCPU_CF.c  MinxCPU_SP.c  MinxCPU_XX.c  MinxCPU_noBranch.h  MinxLCD.c  MinxLCD.h  MinxPRC.c  MinxTimers.c  MinxTimers.h  PMCommon.c  PokeMini.c  PokeMini.h  UI.c
